Feat: Implement handling of previous LigneKbart data in file processing
Introduce `LigneKbart` entity and repository for managing KBART rows. Update services and controller to incorporate logic for retrieving and processing data from the latest associated package during file uploads.