@@ -1,7 +1,9 @@
 package fr.abes.kbart2kafka.service;
 
+import fr.abes.kbart2kafka.entity.LigneKbart;
 import fr.abes.kbart2kafka.entity.Provider;
 import fr.abes.kbart2kafka.entity.ProviderPackage;
+import fr.abes.kbart2kafka.repository.LigneKbartRepository;
 import fr.abes.kbart2kafka.repository.ProviderPackageRepository;
 import fr.abes.kbart2kafka.repository.ProviderRepository;
 import org.springframework.stereotype.Service;
@@ -16,10 +18,12 @@ public class ProviderPackageService {
     private final ProviderPackageRepository repository;
 
     private final ProviderRepository providerRepository;
+    private final LigneKbartRepository ligneKbartRepository;
 
-    public ProviderPackageService(ProviderPackageRepository repository, ProviderRepository providerRepository) {
+    public ProviderPackageService(ProviderPackageRepository repository, ProviderRepository providerRepository, LigneKbartRepository ligneKbartRepository) {
         this.repository = repository;
         this.providerRepository = providerRepository;
+        this.ligneKbartRepository = ligneKbartRepository;
     }
 
     public boolean hasMoreRecentPackageInBdd(String provider, String packageName, Date datePackage) {
@@ -28,8 +32,23 @@ public class ProviderPackageService {
             List<ProviderPackage> packageList = repository.findByPackageNameAndProviderIdtProvider(packageName, providerBdd.get().getIdtProvider());
             Collections.sort(packageList);
             if (!packageList.isEmpty())
-                return packageList.get(0).getDateP().after(datePackage);
+                return packageList.getFirst().getDateP().after(datePackage);
         }
         return false;
+    }
+
+    public ProviderPackage getLastProviderPackage(String provider, String packageName) {
+        Optional<Provider> providerBdd = providerRepository.findByProvider(provider);
+        if(providerBdd.isPresent()) {
+            List<ProviderPackage> packageList = repository.findByPackageNameAndProviderIdtProvider(packageName, providerBdd.get().getIdtProvider());
+            Collections.sort(packageList);
+            if (!packageList.isEmpty())
+                return packageList.getFirst();
+        }
+        return null;
+    }
+
+    public List<LigneKbart> getLigneKbartByProviderPackage(ProviderPackage providerPackage){
+        return ligneKbartRepository.findAllByProviderPackage(providerPackage);
     }
 }
